# win32-cmake-template

./: CMakeLists.txt  README.md
